# fiona_analyses

./: .gitignore  README.md  install.sh  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: curie_export_rules.mdc  eda_workflow.mdc  exp_analysis_workflow.mdc  global.mdc
context/: j-fresh-sessions-discovery-mapping.md  j-fresh-sessions-events-documentation.md
user-analysis/adhoc/sql/: explore.sql  sms_optin_four_countries.sql
user-analysis/cx_ios_guest_conversion_fix/python/: daily_mau_lift_analysis.py
user-analysis/cx_ios_guest_conversion_fix/sql/: daily_mau_lift.sql  explore.sql  rau_impact.sql
user-analysis/cx_ios_reonboarding/outputs/: notification_view_summary.txt
user-analysis/cx_ios_reonboarding/python/: 01_eda_before_cleaning.py  did_reonboarding_lift_by_lifestage.py  notification_view_by_promo_eligibility.py  onboarding_funnel_promo_breakdown.py  onboarding_funnel_promo_breakdown_mcp.py  plot_notification_view_simple.py  plot_reonboarding_lift.py  statsig_promo_eligibility.py  statsig_test_funnel_recency_lift.py  (+1 more)
user-analysis/dashpass_pickup_analysis/: ANALYSIS_SUMMARY.md  STORE_DECILE_ANALYSIS_SUMMARY.md  dashpass_pickup_analysis.py  dashpass_pickup_store_decile_analysis.py
user-analysis/enable_item_order_count_l30d_badge/: STORE_DECILE_ANALYSIS_README.md
user-analysis/first_session_analysis/: DATABRICKS_LOGISTIC_REGRESSION_GUIDE.md  MODEL_IMPROVEMENTS.md
user-analysis/guest_to_consumer_rau/: ANALYSIS_SUMMARY.md
user-analysis/new_user_onboarding_pre_post/: ITS_CAUSAL_ANALYSIS_SUMMARY.md
user-analysis/notification_audit/: nv_propensity_model_analysis_summary.md
user-analysis/nv_dp_intro_deepdive/: NV_DP_Analysis_Methodology.md  NV_DP_Deep_Dive_Analysis_Report.md  prompt.md  readme.md
user-analysis/post_onboarding_customer_journey/: att_deep_dive.sql  temp_query.sql
user-analysis/q4_sizing_adhoc/: order_rate_365_churn.sql
utils/: .gitignore  logger.py
(+304 files in other folders)
