[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-analytics-mcp"
version = "0.1.0"
description = "MCP server for cursor-analytics tools and context"
authors = [
    {name = "Cursor Analytics Team"}
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.5.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "matplotlib>=3.0.0",
    "snowflake-connector-python[pandas]>=3.6.0",
    "snowflake-snowpark-python>=1.9.0",
    "snowflake-sqlalchemy>=1.4.0",
    "python-dotenv>=0.19.0",
    "gspread>=5.7.0",
    "oauth2client>=4.1.3",
    "gspread-formatting>=1.1.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "keyring>=23.0.0",
    "sqlalchemy>=1.4.0",
    "polars>=0.18.0",
    "pyspark==3.3.4",
    "packaging>=21.0",
    # Confluence integration
    "atlassian-python-api>=3.0.0",
    # Document indexing dependencies
    "sentence-transformers>=2.2.0",
    "torch>=1.9.0",
    "transformers>=4.21.0",
    "rank-bm25>=0.2.2",
    # LLM gateway SDK for local tools
    "portkey-ai>=1.3.0",
    # PDF and image processing for Google Docs drawing extraction
    "pdf2image>=1.16.0",
    "Pillow>=9.0.0",
    # Git operations for GitHub integration
    "GitPython>=3.1.0",
]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
cursor-analytics-mcp = "cursor_analytics_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_analytics_mcp"]

[tool.hatch.envs.default]
path = "venv"
dependencies = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true